// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescriptionRow should match snapshot 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
    title="title"
  >
    <div
      data-testid="children"
    />
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 2`] = `
<DocumentFragment>
  <span
    class="styledComponents__TextContent-sc-1627zcn-0"
    title="title"
  >
    <div
      data-testid="children"
    />
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 3`] = `
<DocumentFragment>
  <span
    class="styledComponents__TextContent-sc-1627zcn-0"
    title="children"
  >
    children
  </span>
</DocumentFragment>
`;

exports[`DescriptionRow should match snapshot 4`] = `
<DocumentFragment>
  <span
    class="styledComponents__TextContent-sc-1627zcn-0"
  >
    <div
      data-testid="children"
    />
  </span>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-descriptions styledComponents__Descriptions-sc-1627zcn-1 cLNauE"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-0
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-0"
                  >
                    <div
                      data-testid="children-0"
                    />
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-1
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-1"
                  >
                    <div
                      data-testid="children-1"
                    />
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-2
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-2"
                  >
                    <div
                      data-testid="children-2"
                    />
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DescriptionSection should match snapshot 2`] = `
<DocumentFragment>
  <div
    class="ant-descriptions styledComponents__Descriptions-sc-1627zcn-1 cLNauE"
  >
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-0
                </span>
              </div>
            </th>
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-1
                </span>
              </div>
            </th>
            <th
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  label-2
                </span>
              </div>
            </th>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-0"
                  >
                    <div
                      data-testid="children-0"
                    />
                  </span>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-1"
                  >
                    <div
                      data-testid="children-1"
                    />
                  </span>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="styledComponents__TextContent-sc-1627zcn-0 blknsi"
                    title="title-2"
                  >
                    <div
                      data-testid="children-2"
                    />
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
